--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,55 @@
 {
-    "editor.autoClosingQuotes": "always",
-    "editor.autoSurround": "brackets",
-    "workbench.preferredDarkColorTheme": "Visual Studio Light",
-    "path-intellisense.autoSlashAfterDirectory": true,
-    "editor.autoClosingBrackets": "always"
+    "better-comments.tags": [
+
+
+
+
+
+        
+
+
+
+
+    
+        {
+            "tag": "!",
+            "color": "#FF2D00",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "?",
+            "color": "#3498DB",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "//",
+            "color": "#474747",
+            "strikethrough": true,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "`",
+            "color": "#FF8C00",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+        {
+            "tag": "*",
+            "color": "black",
+            "strikethrough": false,
+            "backgroundColor": "white"
+        },
+         {
+            "tag": "/",
+            "color": "#ff00ff",
+            "strikethrough": false,
+            "backgroundColor": "transparent"
+        },
+    ],
+    "better-comments.highlightPlainText": true,
+    "easy-highlight.highlightColor": "#00ff1d",
+    "editor.tokenColorCustomizations":{
+        "comments":"#ed97bf"} ,
 }
