--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        
-
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - BasicJava",
+            "request": "launch",
+            "mainClass": "java.BasicJava",
+            "projectName": "Project_674e351f"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - BasicJava",
+            "request": "launch",
+            "mainClass": "BasicJava",
+            "projectName": "Project_674e351f"
+        },
         {
             "type": "pwa-chrome",
             "request": "launch",
